Fix minor layout issues

--- a/screen/custom.css
+++ b/screen/custom.css
@@ -1,3 +1,4 @@
 #number {
-  font-size: 38rem;
+  line-height: 1;
+  font-size: 50rem;
 }
